--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-   
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -25,8 +24,9 @@
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.3",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
+    "react-toastify": "^10.0.5",
     "styled-components": "^6.1.8",
-    
     "vite": "^5.2.6"
   },
   "devDependencies": {
